# Master-Yoda

./: README.md
Services/AppraisalGuide/: constants.py  llm.py  main.py  models.py  pyproject.toml  redis_client.py  run.py  session_store.py  settings.py  state.py  store.py  utils.py  workflow.py
Services/AppraisalGuide/agents/: context_builder.py  evaluation_agent.py  project_intake.py  start.py
Services/AppraisalGuide/tools/: clockify_tools.py  feedback_doc_reader.py
YodaUI/: index.html  package-lock.json  package.json
YodaUI/src/: App.tsx
YodaUI/src/api/: auth.ts  conversation.ts  endpoints.ts
YodaUI/src/components/: ConversationMessages.tsx  ConversationSidebar.tsx  Header.tsx  MessageInput.tsx  NewConversationModal.tsx  StatusDisplay.tsx
YodaUI/src/contexts/: AuthContext.tsx
YodaUI/src/hooks/: useSSEStream.ts  useVoiceInput.ts
YodaUI/src/pages/: Conversations.module.css  Conversations.tsx  Home.tsx  Login.tsx
YodaUI/src/types/: auth.ts  conversation.ts
